syntax = "proto3";
package user_proto;
service UserProto {
  rpc FindUsersByAddrs(FindUsersByAddrsRequest) returns (UserListResponse); 
  rpc FindUsersByIds(FindUsersByIdsRequest) returns (UserListResponse);
}
message FindUsersByAddrsRequest {
    repeated string addrs = 1;
}
message FindUsersByIdsRequest {
    repeated uint64 ids = 1;
}
message UserListResponse {
    repeated User users = 1;
}
message User {
    uint64 id = 1;
    string userName = 2;
    string nickName = 3;
    string avatar = 4;
    string addr = 5;
    int32 gender = 6;
    int32 status = 7;
    string pubKey = 8;
    uint64 createdAt = 9;
    uint64 updatedAt = 10;
    uint64 deletedAt = 11;
    string sign = 12;
}